--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^3.1.1",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.22",
+    "pdfkit": "^0.13.0",
     "pug": "^3.0.2",
     "sequelize": "^6.31.0",
     "sequelizer": "^1.1.4"
